<resources>
    <string name="app_name">DriverApp</string>

    <!-- Окно ввода номера и прикладыванием карты -->
    <string name="inputNumberPhone">Введите ваш номер телефона</string>
    <string name="or">или</string>
    <string name="applySmartCard">Приложите смарт-карту</string>

    <!-- Окно ввода пароля -->
    <string name="inputPassword">Введите пароль</string>

    <!-- Окно ввода кода -->
    <string name="inputCode">Введите код идентификации</string>

    <!-- Правое навигационное окно -->
    <string name="summary">Сводка</string>
    <string name="change">Смена</string>
    <string name="intercom">Интерком</string>
    <string name="dispatcher">Диспетчер</string>
    <string name="camera">Камеры</string>

    <!--Окно сводки -->
    <string name="passengersInCabin">Пассажиров \nв салоне</string>
    <string name="paidPlaces">Оплачено \nмест</string>
    <string name="ticketsSold">Проданные билеты</string>
    <string name="nextStop">Следующая остановка</string>
    <string name="departureTime">Время отправления</string>

    <!--Окно смены -->
    <string name="finishedChange">Завершить смену</string>
    <string name="suspend">Приостановить</string>
    <string name="informationChange">Информация о смене</string>
    <string name="driver">Водитель</string>
    <string name="bus">Автобус</string>
    <string name="conductor">Кондуктор</string>
    <string name="route">Маршрут</string>
    <string name="plan">План</string>
    <string name="executionPlan">Исполнение плана</string>
    <string name="soldTrips">Продано поездок</string>
    <string name="timeEnd">Время окончания</string>
    <string name="endChange">До конца смены</string>

    <!--Окно SOS -->
    <string name="sos">SOS</string>
    <string name="struckWheel">Пробил колесо</string>
    <string name="deadBattery">Сел аккумулятор</string>
    <string name="terroristThreat">Угроза терракта</string>
    <string name="healthThreat">Угроза здоровью пассажиров</string>
    <string name="fireThreat">Угроза пажара</string>

    <!-- Окно интерком -->
    <string name="speak">Говорить</string>
    <string name="playSound">Воспроизвести</string>
    <string name="beingRecorded">Идет запись</string>

    <!-- Окно диспетчер -->
    <string name="yourMessage">Ваше сообщение</string>

</resources>
