<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clickedButton">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/sos"
            android:textSize="40sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:text="@string/struckWheel"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_x1_x2_x3_shape"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:text="@string/deadBattery"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_x1_x2_x3_shape"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:text="@string/terroristThreat"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_x1_x2_x3_shape"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:text="@string/healthThreat"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_x1_x2_x3_shape"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:text="@string/fireThreat"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_x1_x2_x3_shape"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
