<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:scaleType="fitStart"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/inputNumberPhone"
            android:textColor="@color/grayText" />

        <com.github.pinball83.maskededittext.MaskedEditText
            android:id="@+id/maskedEditTextPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:inputType="number"
            app:mask="+7 (***) *** - ** - **"
            app:notMaskedSymbol="*" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:text="@string/or"
            android:textColor="@color/grayText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/applySmartCard"
            android:textColor="@color/grayText" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:scaleType="fitStart"
            android:src="@drawable/card_icon" />

    </LinearLayout>


</RelativeLayout>
