<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal" >

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.develop.driverapp.ui.fragment.MapFragment"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/clickedButton"
        android:padding="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="start"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passengersInCabin"
                    android:textColor="@color/summaryText"
                    android:layout_gravity="start"/>

                <TextView
                    android:id="@+id/passengersInCabin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/places_bus"
                    android:layout_gravity="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_gravity="end"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paidPlaces"
                    android:textColor="@color/summaryText"
                    android:layout_gravity="start"/>

                <TextView
                    android:id="@+id/paidPlaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/places_bus"
                    android:textColor="@color/white"
                    android:layout_gravity="end"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticketsSold"
                android:textColor="@color/summaryText"
                android:layout_gravity="start"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextStop"
                android:textColor="@color/summaryText"
                android:layout_gravity="start"
                android:layout_weight="1"/>


            <TextView
                android:id="@+id/nextStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="start"
                android:layout_weight="3"/>


            <TextView
                android:id="@+id/numberPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="start"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departureTime"
                android:textColor="@color/summaryText"
                android:layout_gravity="start"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/summary_time_size"
                    android:maxLines="1"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/lostTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lostTime"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/lost_time"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
